Fix submodule configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,8 @@
-[submodule "HomeAssistantTimeMachineBeta"]
-	path = HomeAssistantTimeMachineBeta
-	url = https://github.com/saihgupr/HomeAssistantTimeMachineBeta
-[submodule "HomeAssistantVersionControlBeta"]
-	path = HomeAssistantVersionControlBeta
-	url = https://github.com/saihgupr/HomeAssistantVersionControlBeta
-[submodule "addons/HomeAssistantTimeMachineBeta"]
-	path = addons/HomeAssistantTimeMachineBeta
-	url = https://github.com/saihgupr/HomeAssistantTimeMachineBeta
-[submodule "addons/HomeAssistantTimeMachine"]
-	path = addons/HomeAssistantTimeMachine
-	url = https://github.com/saihgupr/HomeAssistantTimeMachine
+[submodule "HomeAssistantTimeMachine"]
+	path = HomeAssistantTimeMachine
+	url = https://github.com/saihgupr/HomeAssistantTimeMachine.git
+	branch = develop
+[submodule "HomeAssistantVersionControl"]
+	path = HomeAssistantVersionControl
+	url = https://github.com/saihgupr/HomeAssistantVersionControl.git
+	branch = develop
